# finjuice

./: .env.example  .gitattributes  .gitignore  .mcp.example.json  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  justfile  pyproject.toml
.github/: coderabbit.yaml  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  data_schema_contract.yml  feature_request.yml
.github/workflows/: audit.yml  ci-full.yml  ci.yml  claude-code-review.yml  claude.yml  codeql.yml  docs-check.yml  public-pr-ci.yml  release.yml  scorecard.yml
docs/: README.md  design-review-skill-cli-integration.md
docs/architecture/: README.md
docs/benchmarks/: duckdb-results.json  polars-performance.md  polars-results-large.json  polars-results.json  row-hash-lookup-results.json  row-hash-lookup.md
docs/demos/: ai-command-execution-demo.md
docs/development/: branch-protection.md  ci.md  cli-json-smoke.md  cli-style-guide.md  cli-thin-wrapper-pattern.md  code-quality.md  code-scanning.md  dependency-updates.md  migration-notes.md  mutation-testing.md  pypi-trusted-publishing.md  release-artifacts.md  release-provenance.md  release.md  security-baselines.md  todos.md  typed-json-payload-contracts.md  workflow-permissions.md
docs/guides/: README.md  ai_analyst_guide.md  analyst-workflow.md  documentation-plan.md  public-agent-smoke.md  troubleshooting.md  user_guide.md
docs/reference/: README.md  cli.md  duckdb-snippets.md  json-schemas.md  rules-conditions.md  schema.md  tagging-review-terminology.md
docs/workflows/: agentic-issue-registration.md  ai-finance-report-dogfood.md  rule-editing-with-claude.md
schemas/: README.md  _error.schema.json  _meta.schema.json  _pagination.schema.json  all.schema.json  assets_balance.schema.json  assets_show.schema.json  assets_status.schema.json  audit_clear.schema.json  audit_log.schema.json  audit_stats.schema.json  automation_run.schema.json  budget_edit.schema.json  budget_status.schema.json  budget_validate.schema.json  checkup.schema.json  context.schema.json  doctor.schema.json  explain.schema.json  export.schema.json  history.schema.json  import.schema.json  index.schema.json  ingest.schema.json  init.schema.json  inspect_xlsx.schema.json  journal_list.schema.json  manifest.schema.json  networth.schema.json  networth_breakdown.schema.json  networth_forecast.schema.json  networth_history.schema.json  networth_init.schema.json  networth_validate.schema.json  query.schema.json  refresh.schema.json  review.schema.json  rules_add.schema.json  rules_export.schema.json  rules_gaps.schema.json  (+14 more)
scripts/: benchmark_duckdb.py  benchmark_polars.py  benchmark_row_hash_lookup.py  bump_version.py  check_complexity_ratchet.py  check_doc_links.py  check_package_contents.py  check_pii_logging.py  check_security_baselines.py  check_workflow_permissions.py  generate_cli_docs.py  generate_e2e_fixtures.py  generate_schema_docs.py  generate_tool_schema.py  migrate_hash_length.py  migrate_schema_v3.py  setup.sh  smoke_agent_workflow.py  smoke_installed_artifact.py  smoke_installed_cli_json.py  sync_agent_assets.py  test.sh  validate_agent_package.py
security/: bandit-baseline.json  pip-audit-baseline.json
skills/finjuice/: SKILL.md
skills/finjuice-curate/: SKILL.md
skills/finjuice-diagnose/: SKILL.md
skills/finjuice-onboard/: SKILL.md
skills/finjuice-report/: SKILL.md
skills/finjuice-review/: SKILL.md
skills/finjuice-rule-cleanup/: SKILL.md
src/finjuice/: __init__.py
templates/: .gitkeep  README.data.md  __init__.py  assets.yaml.example  data-structure.md  rules.yaml.example  scenarios.yaml.example  schema.yaml  tools.json
templates/examples/: card_benefits.yaml  card_benefits.yaml.example
templates/prompts/: reports.yaml
templates/visualizations/: __init__.py  chart_helpers.py  plotly_themes.py
tests/: README.md  __init__.py  conftest.py  test_amount_validation_warnings.py  test_asset_ingest_pipeline.py  test_automation_config.py  test_automation_signal.py  test_banksalad_overview_ingest_pipeline.py  test_checkup_bundle.py  test_config.py  test_config_file.py  test_dependency_metadata.py  test_doc_consistency.py  test_error_handling.py  test_export_edge_cases.py  test_filters.py  test_finance_invariants.py  test_idempotency.py  test_import_boundaries.py  test_ingest_deduplication.py  test_ingest_pipeline.py  test_ingest_schemas.py  test_json_schemas.py  test_master_export.py  test_metadata_import_history.py  test_optional_duckdb.py  test_overview_processor.py  test_reexport_shims.py  test_report_filters.py  test_reports.py  test_schema_registry.py  test_schema_version_tracking.py  test_skill_runtime_ensure.py  test_skill_side_effect_contracts.py  test_sql_utils.py  test_tagging_pipeline.py  test_tagging_rules.py  test_tool_schema.py  test_transfer_detection.py  test_workflow_trust_boundaries.py
tests/analytics/: __init__.py  test_analytics_view.py  test_duckdb_layer.py  test_duckdb_normalization.py  test_query_builder.py
tests/archive/: test_cli_legacy.py
tests/cli/: conftest.py  report_filter_support.py  test_analyze_gaps.py  test_audit.py  test_context.py  test_doctor.py  test_emit.py  test_envelope_consistency.py  test_error_envelope_contract_matrix.py  test_export_filters.py  test_export_rules.py  test_import.py  test_import_first_run.py  test_import_use_case.py  test_index.py  test_init_agents.py  test_inspect_xlsx.py  test_journal.py  test_json_output.py  test_manifest.py  test_no_filter_flag.py  test_open.py  test_output_helper.py  test_pagination.py  test_pipeline.py  test_query_filters.py  test_query_security.py  test_report_filters_cli.py  test_rules_add_remove.py  test_rules_test.py  test_sentinel_error_envelope.py  test_show.py  test_show_filters.py  test_status.py  test_suggest_rules.py  test_validate_cmd.py  test_validate_rules_cmd.py  test_version.py  test_workspace.py
tools/: __init__.py  generate_schemas.py  render_schema_md.py  ruff_complexity_baseline.json
(+282 files in other folders)
